--- a/app/src/main/res/layout/content_settings.xml
+++ b/app/src/main/res/layout/content_settings.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/action_settings"
+            android:text="@string/settings"
             android:textSize="50sp"/>
 
     </android.support.constraint.ConstraintLayout>
