--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,64 +4,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        tools:openDrawer="start">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            app:itemBackground="@color/colorPrimary"
+            app:itemIconTint="@color/bottom_navigation_item_background_colors"
+            app:itemTextColor="@color/bottom_navigation_item_background_colors"
+            app:menu="@menu/menu_bottom_navigation"/>
 
-            <com.ogaclejapan.smarttablayout.SmartTabLayout
-                android:id="@+id/tab_main"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:background="@android:color/darker_gray"
-                app:stl_clickable="true"
-                app:stl_defaultTabBackground="?attr/selectableItemBackground"
-                app:stl_defaultTabTextAllCaps="true"
-                app:stl_defaultTabTextColor="#FC000000"
-                app:stl_defaultTabTextHorizontalPadding="16dp"
-                app:stl_defaultTabTextMinWidth="0dp"
-                app:stl_defaultTabTextSize="12sp"
-                app:stl_distributeEvenly="false"
-                app:stl_dividerColor="#4D000000"
-                app:stl_dividerThickness="1dp"
-                app:stl_drawDecorationAfterTab="true"
-                app:stl_indicatorAlwaysInCenter="false"
-                app:stl_indicatorColor="#40C4FF"
-                app:stl_indicatorCornerRadius="2dp"
-                app:stl_indicatorGravity="top"
-                app:stl_indicatorInFront="false"
-                app:stl_indicatorInterpolation="smart"
-                app:stl_indicatorThickness="4dp"
-                app:stl_indicatorWidth="auto"
-                app:stl_indicatorWithoutPadding="false"
-                app:stl_overlineColor="#4D000000"
-                app:stl_overlineThickness="0dp"
-                app:stl_titleOffset="24dp"
-                app:stl_underlineColor="#4D000000"
-                app:stl_underlineThickness="1dp"
-                />
+    </RelativeLayout>
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <android.support.design.widget.NavigationView
-            android:id="@+id/nav_left"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/nav_header_main"
-            app:menu="@menu/activity_main_drawer"/>
-
-    </android.support.v4.widget.DrawerLayout>
 </layout>
