--- a/app/src/main/res/color/bottom_navigation_item_background_colors.xml
+++ b/app/src/main/res/color/bottom_navigation_item_background_colors.xml
@@ -5,7 +5,7 @@
         android:color="@android:color/darker_gray"
         android:state_checked="false"/>
     <item
-        android:color="@android:color/white"
+        android:color="@android:color/holo_green_dark"
         android:state_checked="true"/>
 
 </selector>
