--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,36 +4,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:weightSum="100"
-        android:id="@+id/container"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="app.kulture.kucherenko.init.com.kulture.ui.activity.main.MainActivity">
+    <RelativeLayout
+        android:id="@+id/activity_with_view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="92"
-            android:layout_above="@+id/navigation"
+            android:layout_above="@+id/bottom_navigation"
             android:layout_alignParentTop="true"
+            android:layout_weight="92"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         </android.support.v4.view.ViewPager>
 
-        <android.support.design.widget.BottomNavigationView
+        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            app:itemBackground="@color/colorPrimary"
+            app:itemBackground="@android:color/white"
             app:itemIconTint="@color/bottom_navigation_item_background_colors"
             app:itemTextColor="@color/bottom_navigation_item_background_colors"
             app:menu="@menu/menu_bottom_navigation"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </layout>
