--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/cardview_dark_background"
             android:layout_alignParentTop="true"
-            android:id="@+id/toolbar">
+            android:background="@color/cardview_dark_background">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="15"
+                    android:layout_weight="80"
                     android:orientation="vertical">
 
                     <ImageView
@@ -36,10 +36,10 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:gravity="right"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="80"
+                    android:layout_weight="15"
+                    android:gravity="right"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -53,8 +53,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
+                        android:paddingStart="3dp"
                         android:text="20000.00"
-                        android:textSize="16sp"/>
+                        android:textColor="@color/orange_special"
+                        android:textSize="16sp"
+                        android:textStyle="bold"/>
                 </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.Toolbar>
@@ -65,19 +68,14 @@
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"
             android:layout_below="@+id/toolbar"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        </android.support.v4.view.ViewPager>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            app:itemBackground="@android:color/white"
-            app:itemIconTint="@color/bottom_navigation_item_background_colors"
-            app:itemTextColor="@color/bottom_navigation_item_background_colors"
-            app:menu="@menu/menu_bottom_navigation"/>
+            app:selectedBackgroundVisible="false"
+            android:layout_alignParentBottom="true"/>
 
     </RelativeLayout>
 
