--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -60,6 +60,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
+            <Button
+                android:id="@+id/btn_settings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Settings"/>
         </LinearLayout>
 
     </LinearLayout>
