--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -12,7 +12,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.example.alex.ruletkacsgo.ui.activity.main.MainActivity">
+        tools:context="com.example.alex.banana.ui.activity.main.MainActivity">
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
