--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.example.alex.ruletkacsgo.ui.activity.main.MainActivity">
+        tools:context="com.example.alex.banana.ui.activity.main.MainActivity">
 
     </android.support.constraint.ConstraintLayout>
 </layout>
