--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -4,73 +4,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:scaleType="centerCrop"
+            android:src="@drawable/fon_5"/>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/profile_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.3"
-                android:background="@color/authui_colorPrimaryDark"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="8dp"
-                    android:layout_weight="3"
-                    android:background="@color/authui_colorPrimary"
-                    android:gravity="center"
-                    android:paddingLeft="8dp"
-                    android:text="User Name"
-                    android:textAlignment="textStart"/>
+                android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/profile_header"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:weightSum="10">
-
-                    <ImageView
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="8dp"
-                        android:layout_weight="0.2"
-                        android:background="@color/authui_colorAccent"/>
+                    android:layout_weight="1.3"
+                    android:background="@color/authui_colorPrimaryDark"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_margin="8dp"
-                        android:layout_weight="10"
-                        android:text="Level and other different characteristic"/>
+                        android:layout_weight="3"
+                        android:background="@color/authui_colorPrimary"
+                        android:gravity="center"
+                        android:paddingLeft="8dp"
+                        android:text="User Name"
+                        android:textAlignment="textStart"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:weightSum="10">
+
+                        <ImageView
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_margin="8dp"
+                            android:layout_weight="0.2"
+                            android:background="@color/authui_colorAccent"/>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="8dp"
+                            android:layout_weight="10"
+                            android:text="Level and other different characteristic"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:id="@+id/profile_main"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="8dp">
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Settings"/>
             </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/profile_main"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="8dp">
-
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/btn_settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Settings"/>
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+    </FrameLayout>
 </layout>
